--- a/product.yml
+++ b/product.yml
@@ -3,11 +3,11 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: root
-    url: jdbc:mysql://127.0.0.1/SpringCloud_Sell?characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://192.168.31.232/SpringCloud_Sell?characterEncoding=utf-8&useSSL=false
   jpa:
     show-sql: true
   rabbitmq:
-    host: localhost
+    host: 192.168.31.232
     port: 5672
     username: guest
     password: guest
